Fixes cluster style (when used to create the cluster images).